@@ -5,7 +5,8 @@ To do in this branch before merging back to trunk
   unicode.  This is unrelated to this branch really, but running the
   responses migration step can trigger errors caused by descriptions
   that were first strings to now be unicode; see the Description
-  method in PoiIssue.py.
+  method in PoiIssue.py.  [Update: migration was added, but it can use
+  some tests.]
 
 - Send email when response is added.
 
