@@ -74,3 +74,41 @@ def migrate_responses(context):
         for issue in tracker.contentValues():
             replace_old_with_new_responses(issue)
         tracker.setSendNotificationEmails(original_send_emails)
+
+
+def fix_descriptions(context):
+    """Fix issue Descriptions.
+
+    In revision 53855 a change was made that caused the Description
+    field of issues that were first strings to now possibly turn into
+    unicode.  That fixed this issue:
+    http://plone.org/products/poi/issues/135
+
+    But as stated at the bottom of that issue, this can give a
+    UnicodeEncodeError when changing the issue or adding a response to
+    it.  The Description string that is in the catalog brain is
+    compared to the unicode Description from the object and this fails
+    when the brain Description has non-ascii characters.
+
+    A good workaround is to clear and rebuild the catalog.  But
+    running this upgrade step also fixes it.
+    """
+    log.info("Start fixing issue descriptions.")
+    catalog = getToolByName(context, 'portal_catalog')
+    brains = catalog.searchResults(portal_type='PoiIssue')
+    log.info("Found %s PoiIssues.", len(brains))
+    fixed = 0
+    for brain in brains:
+        if isinstance(brain.Description, str):
+            issue = brain.getObject()
+            if isinstance(issue.Description(), unicode):
+                log.debug("Un/reindexing PoiIssue %s", brain.getURL())
+                # This is the central point really: directly
+                # reindexing this issue can fail if the description
+                # has non-ascii characters.  So we unindex it first.
+                catalog.unindexObject(issue)
+                catalog.reindexObject(issue)
+                fixed += 1
+                if fixed % 100 == 0:
+                    log.info("Fixed %s PoiIssues so far; still busy...", fixed)
+    log.info("Fix completed.  %s PoiIssues needed fixing.", fixed)
